# ai-rs

./: readme.md
.cargo/: config.toml
crates/: Cargo.toml
crates/burn-rs/: Cargo.toml
crates/candle/: Cargo.toml
crates/candle-rs/: Cargo.toml
crates/candle-rs/examples/gemma/: main.rs  text.rs
crates/candle-rs/examples/llama2/: main.rs
crates/candle-rs/src/: token.rs
crates/candle/examples/gemma/: main.rs  text.rs
crates/candle/examples/llama2/: main.rs
crates/candle/src/: lib.rs
crates/openai/: Cargo.toml
crates/openai-rs/: Cargo.toml
crates/openai-rs/src/: main.rs
