[workspace]
resolver = "2"
members = [
    "candle",
    "openai",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
repository = "https://github.com/gents83/ai-rs"
keywords = ["ai", "rust", "openai"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
#HuggingFace
hf-hub = { version = "0.3.0", features = ["tokio"] }
tokenizers = { version = "0.15.2", features = ["onig"] }
#OpenAI
openai_api_rust = "0.1.8"
#Candle
candle-core = { version = "0.4.1", features = ["cuda"]}
candle-transformers = { version = "0.4.1", features = ["cuda"] }
candle-nn = { version = "0.4.1", features = ["cuda"] }
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.7"
#Others
anyhow = { version = "1", features = ["backtrace"] }
serde_json = "1.0.99"