[package]
name = "candle-rs"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[[example]]
name = "gemma"
[[example]]
name = "llama2"

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
tokenizers = { workspace = true }
tracing-chrome = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
